# olympics_are_cool

./: .gitignore  README.md  pyproject.toml
data/: load_data.py
src/olympoly/: explore_data.py  load_data.py  performance.py
src/olympoly/olympics_betting/: market_data.py  probability.py
src/package_name/: explore_data.py  timeline.py
src/polympics/: explore_data.py  performance.py
tests/: test_data_input.py  test_market_data.py  test_performance.py  test_timeline.py
